--- a/CyclingManager.iOS/Main.storyboard
+++ b/CyclingManager.iOS/Main.storyboard
@@ -179,7 +179,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Teamname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktv-PA-nRX">
-                                                    <rect key="frame" x="101" y="10" width="316" height="21"/>
+                                                    <rect key="frame" x="91" y="10" width="326" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="SDd-Ga-c48"/>
                                                     </constraints>
@@ -189,9 +189,10 @@
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ocl-dk-kYz">
                                                     <rect key="frame" x="16" y="0.0" width="80" height="80"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="80" id="29W-pW-Uka"/>
-                                                        <constraint firstAttribute="height" constant="80" id="FPi-3X-yP3"/>
+                                                        <constraint firstAttribute="width" constant="70" id="29W-pW-Uka"/>
+                                                        <constraint firstAttribute="height" constant="70" id="FPi-3X-yP3"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Score" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FEY-VC-eyN">
@@ -209,6 +210,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="FEY-VC-eyN" secondAttribute="bottom" constant="10" id="10w-cM-UCy"/>
+                                            <constraint firstItem="Ocl-dk-kYz" firstAttribute="centerY" secondItem="R7F-Tj-C9o" secondAttribute="centerY" id="6Gw-CU-yzR"/>
                                             <constraint firstAttribute="trailing" secondItem="FEY-VC-eyN" secondAttribute="trailing" constant="8" id="CgD-LJ-afq"/>
                                             <constraint firstItem="ktv-PA-nRX" firstAttribute="leading" secondItem="Ocl-dk-kYz" secondAttribute="trailing" constant="8" id="ESU-J3-vHP"/>
                                             <constraint firstItem="Ocl-dk-kYz" firstAttribute="leading" secondItem="R7F-Tj-C9o" secondAttribute="leadingMargin" constant="5" id="Qob-l1-McP"/>
@@ -238,14 +240,17 @@
                     </view>
                     <navigationItem key="navigationItem" id="S18-jq-nhj">
                         <nil key="title"/>
-                        <barButtonItem key="leftBarButtonItem" title="Ik" id="u8s-V1-4ZW"/>
+                        <barButtonItem key="leftBarButtonItem" title="Me" id="u8s-V1-4ZW"/>
                         <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="skp-xI-O74">
                             <rect key="frame" x="180" y="7" width="240" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <segments>
-                                <segment title="First"/>
-                                <segment title="Second"/>
+                                <segment title="Name"/>
+                                <segment title="Ranking"/>
                             </segments>
+                            <connections>
+                                <action selector="TeamListSortation:" destination="blu-Ly-TDC" eventType="valueChanged" id="QJb-DB-Upe"/>
+                            </connections>
                         </segmentedControl>
                     </navigationItem>
                     <connections>
@@ -301,7 +306,7 @@
                                                 <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="08n-s8-EbI">
                                                     <rect key="frame" x="0.0" y="0.0" width="600" height="44.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Team naam" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQi-10-C8h">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Cycler naam" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQi-10-C8h">
                                                             <rect key="frame" x="29" y="12" width="108" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -319,7 +324,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="TeamNameLabel" destination="hQi-10-C8h" id="40H-zt-0Ua"/>
+                                            <outlet property="CyclerNameLabel" destination="hQi-10-C8h" id="kbn-BV-9QM"/>
                                             <outlet property="bottomConstraint" destination="l4T-xF-cdr" id="nU4-XG-hNr"/>
                                             <outlet property="leadingConstraint" destination="jve-Qf-ahn" id="bEB-la-zLK"/>
                                             <outlet property="topConstraint" destination="Zd2-5i-O5D" id="yS3-qY-2zn"/>
@@ -333,6 +338,7 @@
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DLI-Gw-17D">
                                         <rect key="frame" x="19" y="-13" width="565" height="128"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="APR-eS-4hk">
                                         <rect key="frame" x="459" y="64" width="133" height="30"/>
@@ -351,7 +357,15 @@
                                             <action selector="CompareTeam:" destination="Pnh-wC-qB6" eventType="touchUpInside" id="ABz-se-AhU"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vLw-kP-cbF">
+                                        <rect key="frame" x="8" y="64" width="73" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="73" id="TEt-A7-bfN"/>
+                                        </constraints>
+                                        <state key="normal" title="Follow"/>
+                                    </button>
                                 </subviews>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="DLI-Gw-17D" firstAttribute="top" secondItem="06f-bR-ZAh" secondAttribute="topMargin" id="6dY-wo-KKU"/>
                                     <constraint firstItem="DLI-Gw-17D" firstAttribute="top" secondItem="06f-bR-ZAh" secondAttribute="topMargin" id="7Ln-q1-rgr"/>
@@ -361,6 +375,8 @@
                                     <constraint firstAttribute="bottomMargin" secondItem="DLI-Gw-17D" secondAttribute="bottom" id="QFO-Pk-CcN"/>
                                     <constraint firstItem="yf1-oc-Dk5" firstAttribute="centerX" secondItem="06f-bR-ZAh" secondAttribute="centerX" id="SrU-Ni-My1"/>
                                     <constraint firstAttribute="bottom" secondItem="APR-eS-4hk" secondAttribute="bottom" constant="8" id="bDm-3Y-mvx"/>
+                                    <constraint firstAttribute="bottom" secondItem="vLw-kP-cbF" secondAttribute="bottom" constant="8" id="bfL-02-0Jv"/>
+                                    <constraint firstItem="vLw-kP-cbF" firstAttribute="leading" secondItem="06f-bR-ZAh" secondAttribute="leading" constant="8" id="bky-yu-MlT"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="DLI-Gw-17D" secondAttribute="trailing" id="kIU-nH-zQG"/>
                                     <constraint firstItem="DLI-Gw-17D" firstAttribute="leading" secondItem="06f-bR-ZAh" secondAttribute="leadingMargin" id="mAh-1K-OoC"/>
                                     <constraint firstAttribute="bottom" secondItem="yf1-oc-Dk5" secondAttribute="bottom" constant="8" id="ps8-SH-3qG"/>
@@ -410,10 +426,12 @@
                     </view>
                     <navigationItem key="navigationItem" id="H9F-5N-Wo1"/>
                     <connections>
+                        <outlet property="FollowButton" destination="vLw-kP-cbF" id="MCL-JZ-aaL"/>
                         <outlet property="HeaderHeightConstraint" destination="qIn-mP-fed" id="n9H-cT-gML"/>
+                        <outlet property="RankingButton" destination="APR-eS-4hk" id="vHU-xj-kIs"/>
                         <outlet property="TeamCyclersTable" destination="V18-92-mZa" id="Uy1-hv-gJs"/>
                         <outlet property="TeamHeaderHolder" destination="06f-bR-ZAh" id="W8l-20-lhU"/>
-                        <outlet property="TeamImageView" destination="DLI-Gw-17D" id="mVN-nP-LMG"/>
+                        <outlet property="TeamImageView" destination="DLI-Gw-17D" id="xYp-6p-rLr"/>
                         <outlet property="TeamOwnerDetailHolder" destination="bsV-Su-tBa" id="wwU-IY-SLZ"/>
                         <outlet property="TeamOwnerHolderHeightConstraint" destination="VUX-aU-Bdz" id="bzU-t9-eHe"/>
                         <outlet property="TeamRankingGraphHolder" destination="JI7-ii-Xya" id="QV0-SY-3gK"/>
