--- a/CyclingManager.iOS/Main.storyboard
+++ b/CyclingManager.iOS/Main.storyboard
@@ -306,20 +306,42 @@
                                                 <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="08n-s8-EbI">
                                                     <rect key="frame" x="0.0" y="0.0" width="600" height="44.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Cycler naam" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQi-10-C8h">
-                                                            <rect key="frame" x="29" y="12" width="276" height="21"/>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WGr-BT-Bq5">
+                                                            <rect key="frame" x="19" y="8" width="47" height="20"/>
+                                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="20" id="TRv-de-USy"/>
+                                                                <constraint firstAttribute="width" constant="30" id="uu6-yG-PZU"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Cycler naam" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQi-10-C8h">
+                                                            <rect key="frame" x="80" y="12" width="283" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Score 9999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QAf-6C-G1V">
-                                                            <rect key="frame" x="328" y="12" width="63" height="21"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Score 9999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QAf-6C-G1V">
+                                                            <rect key="frame" x="380" y="12" width="104" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="100" id="lw6-6r-Shd"/>
+                                                            </constraints>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
-                                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="WGr-BT-Bq5" firstAttribute="leading" secondItem="08n-s8-EbI" secondAttribute="leading" constant="10" id="2LP-EV-LVS"/>
+                                                        <constraint firstItem="hQi-10-C8h" firstAttribute="top" secondItem="08n-s8-EbI" secondAttribute="top" id="9g0-uD-BgI"/>
+                                                        <constraint firstItem="QAf-6C-G1V" firstAttribute="top" secondItem="08n-s8-EbI" secondAttribute="top" id="Is2-Vp-MhF"/>
+                                                        <constraint firstAttribute="bottom" secondItem="QAf-6C-G1V" secondAttribute="bottom" id="Q3L-Zy-W1h"/>
+                                                        <constraint firstItem="QAf-6C-G1V" firstAttribute="leading" secondItem="hQi-10-C8h" secondAttribute="trailing" id="QOI-MZ-7vA"/>
+                                                        <constraint firstItem="WGr-BT-Bq5" firstAttribute="centerY" secondItem="08n-s8-EbI" secondAttribute="centerY" id="aLf-en-2i4"/>
+                                                        <constraint firstAttribute="bottom" secondItem="hQi-10-C8h" secondAttribute="bottom" id="hlZ-V1-fEA"/>
+                                                        <constraint firstAttribute="trailing" secondItem="QAf-6C-G1V" secondAttribute="trailing" constant="10" id="jh6-UW-yQb"/>
+                                                        <constraint firstItem="hQi-10-C8h" firstAttribute="leading" secondItem="WGr-BT-Bq5" secondAttribute="trailing" constant="5" id="kKf-9c-czk"/>
+                                                    </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
@@ -330,6 +352,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="CountryFlagImageView" destination="WGr-BT-Bq5" id="Zjw-rV-tbK"/>
                                             <outlet property="CyclerNameLabel" destination="hQi-10-C8h" id="kbn-BV-9QM"/>
                                             <outlet property="CyclerScoreLabel" destination="QAf-6C-G1V" id="idh-MP-nqw"/>
                                             <outlet property="bottomConstraint" destination="l4T-xF-cdr" id="nU4-XG-hNr"/>
@@ -392,6 +415,7 @@
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MYF-Ha-uog">
                                         <rect key="frame" x="8" y="0.0" width="100" height="100"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="80" id="leO-J4-b22"/>
                                             <constraint firstAttribute="width" constant="80" id="sJ3-S0-WwE"/>
