--- a/CyclingManager.iOS/Main.storyboard
+++ b/CyclingManager.iOS/Main.storyboard
@@ -105,6 +105,7 @@
                                             <outlet property="CompetitionNameLabel" destination="fsc-Ih-RdR" id="WTc-lV-F2G"/>
                                             <outlet property="CompetitionSecondCyclerLabel" destination="iEW-Jz-z5T" id="ktT-Ke-WOJ"/>
                                             <outlet property="CompetitionThirdCyclerLabel" destination="GiD-jj-zc9" id="B5t-lW-NFO"/>
+                                            <segue destination="1xq-h7-uGu" kind="show" identifier="CompetitionDetailSegue" id="efC-5d-Qcp"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -498,6 +499,130 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nfs-eQ-0kz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4674" y="-312"/>
+        </scene>
+        <!--Competition Detail View Controller-->
+        <scene sceneID="Mem-ZF-qU0">
+            <objects>
+                <viewController id="1xq-h7-uGu" customClass="CompetitionDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="XP6-gg-dQG"/>
+                        <viewControllerLayoutGuide type="bottom" id="rFx-4l-RMr"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nZs-Iv-iwg">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IjT-Ev-9HD">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="128"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ypj-AH-MCE">
+                                        <rect key="frame" x="0.0" y="22" width="600" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="OPu-Vx-PIi"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="87f-OL-kI5">
+                                        <rect key="frame" x="8" y="73" width="584" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="mSk-L4-bAe"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="cOQ-y4-nYq">
+                                        <rect key="frame" x="180" y="92" width="240" height="29"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="28" id="pTl-lI-RCq"/>
+                                            <constraint firstAttribute="width" constant="240" id="yAM-Ly-spg"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="Teams"/>
+                                            <segment title="Cyclists"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="CompetitionDetailTableSource:" destination="1xq-h7-uGu" eventType="valueChanged" id="mO7-nO-wen"/>
+                                        </connections>
+                                    </segmentedControl>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="Ypj-AH-MCE" firstAttribute="top" secondItem="IjT-Ev-9HD" secondAttribute="top" constant="22" id="24t-Pe-wPW"/>
+                                    <constraint firstItem="cOQ-y4-nYq" firstAttribute="top" secondItem="Ypj-AH-MCE" secondAttribute="bottom" constant="49" id="8bW-aE-wf2"/>
+                                    <constraint firstItem="Ypj-AH-MCE" firstAttribute="leading" secondItem="IjT-Ev-9HD" secondAttribute="leading" id="FOK-qM-xqm"/>
+                                    <constraint firstItem="87f-OL-kI5" firstAttribute="top" secondItem="Ypj-AH-MCE" secondAttribute="bottom" constant="30" id="RNZ-3J-KeR"/>
+                                    <constraint firstAttribute="trailing" secondItem="Ypj-AH-MCE" secondAttribute="trailing" id="bkS-1W-iwL"/>
+                                    <constraint firstAttribute="height" constant="128" id="c8d-EA-Zo8"/>
+                                    <constraint firstAttribute="trailing" secondItem="87f-OL-kI5" secondAttribute="trailing" constant="8" id="itg-Ea-bgr"/>
+                                    <constraint firstItem="87f-OL-kI5" firstAttribute="leading" secondItem="IjT-Ev-9HD" secondAttribute="leading" constant="8" id="q5w-6c-kh6"/>
+                                    <constraint firstItem="cOQ-y4-nYq" firstAttribute="centerX" secondItem="IjT-Ev-9HD" secondAttribute="centerX" id="qz6-2o-dwc"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="74w-jE-zRj">
+                                <rect key="frame" x="0.0" y="136" width="600" height="415"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="zXF-eY-xMj" customClass="CompetitionTableCyclerCell">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zXF-eY-xMj" id="PdY-lJ-vfA">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AXo-YM-TRX">
+                                                    <rect key="frame" x="8" y="11" width="584" height="21"/>
+                                                    <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="CyclerNameLabel" destination="AXo-YM-TRX" id="YCY-aq-ic3"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="QtQ-XW-23H" customClass="CompetitionTableTeamCell">
+                                        <rect key="frame" x="0.0" y="72" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QtQ-XW-23H" id="BHM-Dc-Vqi">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ku-kd-dW5">
+                                                    <rect key="frame" x="8" y="11" width="584" height="21"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="TeamNameLabel" destination="1Ku-kd-dW5" id="CTP-Gk-ybP"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="IjT-Ev-9HD" firstAttribute="leading" secondItem="nZs-Iv-iwg" secondAttribute="leading" id="M6m-bJ-85P"/>
+                            <constraint firstItem="IjT-Ev-9HD" firstAttribute="top" secondItem="nZs-Iv-iwg" secondAttribute="top" id="Ug3-cx-B7v"/>
+                            <constraint firstAttribute="trailing" secondItem="IjT-Ev-9HD" secondAttribute="trailing" id="vA6-tx-fb6"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="CompetitionDateLabel" destination="87f-OL-kI5" id="NuM-gx-Ncx"/>
+                        <outlet property="CompetitionNameLabel" destination="Ypj-AH-MCE" id="1Si-CM-8LR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uQx-du-hdy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4674" y="369"/>
         </scene>
     </scenes>
 </document>
